Clean up of the plugin documentation

--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -1,3 +1,9 @@
+{#
+ # @copyright 2015 iMarc LLC
+ # @author Kevin Hamer [kh] <kevin@imarc.net>
+ # @license Apache (see LICENSE file)
+ #}
+
 {% import "_includes/forms" as forms %}
 
 {{ forms.textField({
