Add optional, separate DB settings for dev and stage

--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -31,9 +31,32 @@
 {{ forms.textField({
 	first:        true,
 	label:        "Base Database Name"|t,
+	id:           'devDbName',
+	name:         'devDbName',
+    instructions: "This will be used for the <strong>development</strong> environment. If left blank, Boost will use the name of the production database prefixed with 'dev_'."|t,
+	value:        settings.devDbName,
+	autofocus:    true,
+	errors:       settings.getErrors('devDbName')
+}) }}
+
+{{ forms.textField({
+	first:        true,
+	label:        "Base Database Name"|t,
+	id:           'stageDbName',
+	name:         'stageDbName',
+    instructions: "This will be used for the <strong>staging</strong> environment. If left blank, Boost will use the name of the production database prefixed with 'stage_'."|t,
+	value:        settings.devDbName,
+	value:        settings.stageDbName,
+	autofocus:    true,
+	errors:       settings.getErrors('stageDbName')
+}) }}
+
+{{ forms.textField({
+	first:        true,
+	label:        "Base Database Name"|t,
 	id:           'dbName',
 	name:         'dbName',
-	instructions: "This will be used for the <strong>production</strong> environment. For Dev and Stage, this will be prefixed with 'dev_' and 'stage_' respectively."|t,
+	instructions: "This will be used for the <strong>production</strong> environment. This field is required."|t,
 	value:        settings.dbName,
 	autofocus:    true,
 	errors:       settings.getErrors('dbName')
