Added ability to overload settings with config file

--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -48,8 +48,11 @@
         or contact <a href="https://www.imarc.com">Imarc</a> for more information.
     </p>
 
-    <div class="textline"></div>
+    <p>
+        All settings can be overloaded with a craft/config/boost.php config file.
+    </p>
 
+    <div class="textline"></div>
 </div>
 
 
